[tool.poetry]
name = "stackoverflow-survey-analysis"
version = "0.1.0"
description = "Analysis of stackoverflow survey with streamlit, pandas and matplotlib."
authors = ["Matheus Kraisfeld <matheuskraisfeld@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pandas = "^1.3.5"
streamlit = "^1.2.0"
numpy = "^1.21.4"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
